[gd_scene load_steps=28 format=3 uid="uid://fkqmi5o8tqo5"]

[ext_resource type="Script" path="res://Escenas/Eventos/darseduro/GatoDarseDuro.gd" id="2_ketnl"]
[ext_resource type="Theme" uid="uid://v28k7lh33uhi" path="res://Escenas/Maingame/themeNameTags.tres" id="2_no4kq"]
[ext_resource type="Texture2D" uid="uid://c3yirgs0h7a0w" path="res://Sprites/Gatos/Gato Timmy/Pelea/cuerpo.png" id="3_y306q"]
[ext_resource type="Texture2D" uid="uid://ba35h2hopp7qk" path="res://Sprites/Gatos/Gato Timmy/Pelea/cabeza golpe.png" id="4_sv5nm"]
[ext_resource type="Texture2D" uid="uid://uonw70nwwxo8" path="res://Sprites/Gatos/Gato Timmy/Pelea/cabeza.png" id="5_bmlfh"]
[ext_resource type="Texture2D" uid="uid://b7u2syubd446b" path="res://Sprites/Comandos/FlechaAbajo.png" id="6_1h6gw"]
[ext_resource type="Texture2D" uid="uid://cprjli65hfnoi" path="res://Sprites/Gatos/Gato Timmy/Pelea/mano.png" id="6_7e0ed"]
[ext_resource type="Texture2D" uid="uid://ds5cfarbrgm6r" path="res://Sprites/Comandos/flechaArriba.png" id="7_q0gdi"]
[ext_resource type="Texture2D" uid="uid://b44jobh427hxp" path="res://Sprites/DarSEDuro/vidaFull.png" id="9_0rrfm"]
[ext_resource type="Texture2D" uid="uid://cmnx6iwc6p8k0" path="res://Sprites/DarSEDuro/vida9.png" id="10_uvrbe"]
[ext_resource type="Texture2D" uid="uid://cneyvfaghwk8" path="res://Sprites/DarSEDuro/vida8.png" id="11_6i17s"]
[ext_resource type="Texture2D" uid="uid://dce6i8grdfh1l" path="res://Sprites/DarSEDuro/vida7.png" id="12_nj12h"]
[ext_resource type="Texture2D" uid="uid://bjjyqqeqtwoa6" path="res://Sprites/DarSEDuro/vida6.png" id="13_xtpkn"]
[ext_resource type="Texture2D" uid="uid://ba20jhquauxwd" path="res://Sprites/DarSEDuro/vida5.png" id="14_1qtq8"]
[ext_resource type="Texture2D" uid="uid://dith7vgkv88ko" path="res://Sprites/DarSEDuro/vida4.png" id="15_066qn"]
[ext_resource type="Texture2D" uid="uid://daob0psaxhss6" path="res://Sprites/DarSEDuro/vida3.png" id="16_pqsng"]
[ext_resource type="Texture2D" uid="uid://c763fkghy37yc" path="res://Sprites/DarSEDuro/vida2.png" id="17_em6h3"]
[ext_resource type="Texture2D" uid="uid://bqeyhfrbmgxhy" path="res://Sprites/DarSEDuro/vida1.png" id="18_hc247"]
[ext_resource type="Texture2D" uid="uid://bub7jneptd1bv" path="res://Sprites/DarSEDuro/vidaVacia.png" id="19_fuf7n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7mixs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sv5nm")
}],
"loop": true,
"name": &"bonk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bmlfh")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a1ld"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rswb3"]
size = Vector2(40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_3b2i4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1h6gw")
}],
"loop": false,
"name": &"down",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_q0gdi")
}],
"loop": false,
"name": &"up",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_4u7nh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_06hjr"]
resource_name = "shake"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.905826, -0.607375, 0.905826, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3k4kv"]
_data = {
"RESET": SubResource("Animation_4u7nh"),
"shake": SubResource("Animation_06hjr")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_2hpbe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_0rrfm")
}, {
"duration": 1.0,
"texture": ExtResource("10_uvrbe")
}, {
"duration": 1.0,
"texture": ExtResource("11_6i17s")
}, {
"duration": 1.0,
"texture": ExtResource("12_nj12h")
}, {
"duration": 1.0,
"texture": ExtResource("13_xtpkn")
}, {
"duration": 1.0,
"texture": ExtResource("14_1qtq8")
}, {
"duration": 1.0,
"texture": ExtResource("15_066qn")
}, {
"duration": 1.0,
"texture": ExtResource("16_pqsng")
}, {
"duration": 1.0,
"texture": ExtResource("17_em6h3")
}, {
"duration": 1.0,
"texture": ExtResource("18_hc247")
}, {
"duration": 1.0,
"texture": ExtResource("19_fuf7n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Gato" type="Node2D" node_paths=PackedStringArray("spriteCabeza")]
scale = Vector2(1.3, 1.3)
script = ExtResource("2_ketnl")
spriteCabeza = NodePath("sprPadre/Cabeza/SprCabeza")

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = -74.6154
offset_top = 204.615
offset_right = 80.3846
offset_bottom = 243.615
theme = ExtResource("2_no4kq")
text = "PLAYER X"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="sprPadre" type="Sprite2D" parent="."]

[node name="SprCuerpo" type="Sprite2D" parent="sprPadre"]
position = Vector2(-22.3077, 96.9231)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_y306q")

[node name="Cabeza" type="Area2D" parent="sprPadre"]
position = Vector2(3.07692, -4.61539)

[node name="SprCabeza" type="AnimatedSprite2D" parent="sprPadre/Cabeza"]
position = Vector2(0.769231, 5.38462)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_7mixs")
animation = &"normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprPadre/Cabeza"]
position = Vector2(0, 6.92308)
shape = SubResource("RectangleShape2D_5a1ld")

[node name="MarkerFinalPAta" type="Marker2D" parent="sprPadre"]
position = Vector2(231.538, 33.8462)

[node name="MarkerMediaPAta" type="Marker2D" parent="sprPadre"]
position = Vector2(167.692, -102.308)

[node name="Pata" type="Area2D" parent="sprPadre"]
position = Vector2(-94, -71)
metadata/_edit_group_ = true

[node name="SprPata" type="Sprite2D" parent="sprPadre/Pata"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_7e0ed")

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprPadre/Pata"]
shape = SubResource("RectangleShape2D_rswb3")

[node name="Marker2D2" type="Marker2D" parent="sprPadre"]
position = Vector2(0, 57)

[node name="TimerCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.12
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="arrow" type="AnimatedSprite2D" parent="."]
position = Vector2(-180, 44.615)
scale = Vector2(0.35, 0.34)
sprite_frames = SubResource("SpriteFrames_3b2i4")
animation = &"down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3k4kv")
}

[node name="VidaSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, 180.769)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_2hpbe")

[connection signal="area_entered" from="sprPadre/Cabeza" to="." method="_on_cabeza_area_entered"]
[connection signal="area_exited" from="sprPadre/Cabeza" to="." method="_on_cabeza_area_exited"]
[connection signal="timeout" from="TimerCooldown" to="." method="_on_timer_cooldown_timeout"]
